[project]
name = "pynapse"
version = "0.1.0"
description = "Python SDK for Filecoin Onchain Cloud (Synapse)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0 OR MIT" }
authors = [
  { name = "FilOz / Data Preservation Programs" }
]
keywords = ["filecoin", "synapse", "web3", "storage", "pdp"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "web3>=6.0.0,<7",
  "httpx>=0.25.0,<0.28.0",
  "multiformats>=0.3.1,<0.4.0"
]

[project.urls]
Homepage = "https://github.com/FilOzone/synapse-sdk"
Repository = "https://github.com/FilOzone/synapse-sdk"

[project.optional-dependencies]
test = [
  "pytest>=8.0.0,<9",
  "pytest-asyncio>=0.23.0,<0.24"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pynapse"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.uv]
package = true
